Refactor Ejson class to use UnsupportedEncodingException for URI encoding errors
- Updated avatar URI generation to specify "UTF-8" encoding instead of StandardCharsets.UTF_8.
- Changed exception handling to catch UnsupportedEncodingException specifically for better clarity in error logging.